[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 8
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.141176, 0.266667, 1 )

[node name="GameOverText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -29.0
margin_right = 128.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 9 )
text = "Game Over!"
align = 1
valign = 1

[node name="CurrentScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 10.0
margin_right = 128.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 10 )
text = "Score 100"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 27.0
margin_right = 128.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 11 )
text = "HighScore 1000"
align = 1
valign = 1

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
